# ILab

./: README.md
MAP/: CMakeLists.txt  Makefile  map.cpp  map.h  node.cpp  node.h  test.cpp
MyString/: .gitignore  mystring.cpp  mystring.h  test.cpp
My_strtok/: my_strtok.c
Old_map/old/: old_map.cpp  old_map.h  old_node.cpp  old_node.h  old_test.cpp
Processor/: .gitignore  CMakeLists.txt  commands.h  program.txt  stack.cpp
Processor/Assembler/: assembler.cpp  assembler.h  main.cpp
Processor/Stack/: interface.cpp  interface.h  main.cpp  stack.cpp  stack.h
Processor/StackClass/: stack.cpp  stack.h
Processor/Str_funcs/: str_funcs.cpp  str_funcs.h
SolveSquare/: KvUr.c  _kv_ur_8c.html
Stack/: Makefile  a.out  interface.cpp  interface.h  main.c  main.cpp  stack.c  stack.cpp  stack.h  stackk.out
StackClass/: interface.cpp  main.cpp  stack.cpp  stack.h
String/: CMakeLists.txt  Makefile  a.out  mystring.cpp  mystring.h  test.cpp
TxtSort/: .Makefile.swp  .gitignore  .gitingnore  Makefile  ONEGIN.txt  Out.txt  Text.txt  TxtSort.c  main.c  main.cpp  sort.out  txtsort.c  txtsort.cpp  txtsort.h
